# SODA

./: .gitignore  README.md  pyproject.toml  requirements-local.txt
.superpowers/sdd/: progress.md
docs/: layout-findings.md
kaggle/: phase1_runbook.md  phase2_runbook.md  reproduce_baselines.md
results/: phase1-results.md  phase1-smoke.md  phase1-validation.md  phase2-devgate.md  phase2-results.md  phase2-smoke.md
scripts/: check_data.py  preview_mask.py  regenerate_masks.py
soda/: __init__.py  alignment_math.py  dg_config.py  domain_sampler.py  ordinal_encoding.py
soda/data/: masks.py  verify_layout.py
soda/metrics/: auc.py  ordinal.py
soda/train/: alignment.py  backbones.py  checkpoint.py  data.py  engine.py  heads.py  requirements-kaggle.txt  run.py  style_aug.py
tests/: test_alignment_math.py  test_auc.py  test_dg_config.py  test_domain_sampler.py  test_masks.py  test_ordinal_encoding.py  test_ordinal_metrics.py  test_smoke.py  test_verify_layout.py
