[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soda"
version = "0.0.1"
description = "SODA local utilities: data prep + metrics (pure Python, no PyTorch)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
include = ["soda*"]
